# dynamodb-expression-rs

./: Cargo.toml  NOTICE.txt  README.md  check.sh
src/: attribute_type.rs  comparator.rs  expression.rs  function.rs  key.rs  lib.rs  name.rs  not.rs  parenthetical.rs
src/aws_sdk_dynamodb/: mod.rs
src/condition/: and.rs  attribute_exists.rs  attribute_not_exists.rs  attribute_type.rs  begins_with.rs  between.rs  comparison.rs  contains.rs  in_.rs  mod.rs  not.rs  or.rs  parenthetical.rs
src/expression/: builder.rs  mod.rs  to_aws.rs
src/name/: mod.rs
src/operand/: mod.rs  operand_type.rs  size.rs
src/path/: element.rs  mod.rs  name.rs
src/update/: add.rs  delete.rs  mod.rs  remove.rs  set_remove.rs
src/update/set/: append.rs  assign.rs  if_not_exists.rs  list_append.rs  math.rs  mod.rs  set_action.rs
src/value/: list.rs  map.rs  mod.rs  num.rs  scalar.rs  set.rs  value_or_ref.rs
src/value/set/: binary_set.rs  mod.rs  num_set.rs  string_set.rs
tests/: aws_sdk_dynamo.rs  simple.rs
tests/dynamodb/: config.rs  debug.rs  item.rs  mod.rs  partial_eq.rs  setup.rs
